rustdocs/errors/rust-bitcoin-bitcoin-tests-network.rs.txt
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoin`
 --> ../rust-bitcoin/bitcoin/tests/network.rs:3:5
  |
3 | use bitcoin::network::{Network, NetworkKind, TestnetVersion};
  |     ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
  |
help: you might be missing a crate named `bitcoin`, add it to your project and import it in your code
  |
3 + extern crate bitcoin;
  |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
